--- a/src/page-about.html
+++ b/src/page-about.html
@@ -237,7 +237,9 @@
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
-        <div class="bredcrumb__text">パンくずリスト</div>
+        <p class="bredcrumb__text">
+          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+        <p class="bredcrumb__text">私たちについて</p>
       </div>
     </div>
 
@@ -276,8 +278,8 @@
     <section class="layout-gallery gallery">
       <div class="gallery__inner inner">
         <div class="section-header">
-          <p class="section-header__title"> Gallery</p>
-          <h2 class="section-header__subtitle">フォト</h2>
+          <p class="section-header__title section-header__title--line-height"> Gallery</p>
+          <h2 class="section-header__subtitle section-header__subtitle--layout">フォト</h2>
         </div>
         <div class="gallery__contents">
           <div class="gallery__image gallery__image--1">
@@ -329,7 +331,7 @@
     </section>
 
     <!-- Contact -->
-    <section class="layout-contact contact">
+    <section class="about-contact contact">
       <div class="contact__inner inner">
         <div class="contact__contents">
           <div class="contact__info">
