--- a/src/page-price.html
+++ b/src/page-price.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -238,7 +237,9 @@
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
-        <div class="bredcrumb__text">パンくずリスト</div>
+        <p class="bredcrumb__text">
+          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+        <p class="bredcrumb__text">料金一覧</p>
       </div>
     </div>
 
