--- a/src/page-privacypolicy.html
+++ b/src/page-privacypolicy.html
@@ -239,7 +239,9 @@
       <!-- パンくず -->
       <div class="page-bredcrumb bredcrumb">
         <div class="bredcrumb__inner inner">
-          <div class="bredcrumb__text">パンくずリスト</div>
+          <p class="bredcrumb__text">
+            <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <p class="bredcrumb__text">プライバシーポリシー</p>
         </div>
       </div>
 
@@ -252,10 +254,8 @@
               <div class="page-privacy__top-group">
                 <p class="page-privacy__top-lead">以下は、Webサイトで使用するための一般的なプライバシーポリシーの例です。</p>
                 <ol class="page-privacy__top-text-group" type="1">
-                  <li class="page-privacy__top-text">概要</li>
-                    当社は、お客様の個人情報を大切に扱い、個人情報保護に努めています。本プライバシーポリシーには、当社がどのように個人情報を収集し、使用するかについて説明しています。</ぃ>
-                  <li class="page-privacy__top-text">収集する情報
-                    当社は、お客様が当社のサービスを利用する際に、お名前、住所、電話番号、メールアドレスなどの個人情報を収集する場合があります。</li>
+                  <li class="page-privacy__top-text">概要 当社は、お客様の個人情報を大切に扱い、個人情報保護に努めています。本プライバシーポリシーには、当社がどのように個人情報を収集し、使用するかについて説明しています。</li>
+                  <li class="page-privacy__top-text">収集する情報 当社は、お客様が当社のサービスを利用する際に、お名前、住所、電話番号、メールアドレスなどの個人情報を収集する場合があります。</li>
                 </ol>
               </div>
               <div class="page-privacy__middle-group">
