--- a/src/page-sitemap.html
+++ b/src/page-sitemap.html
@@ -238,7 +238,9 @@
       <!-- パンくず -->
       <div class="page-bredcrumb bredcrumb">
         <div class="bredcrumb__inner inner">
-          <div class="bredcrumb__text">パンくずリスト</div>
+          <p class="bredcrumb__text">
+            <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <p class="bredcrumb__text">サイトマップ</p>
         </div>
       </div>
 
@@ -537,7 +539,8 @@
       </div>
     </footer>
     <a href="#top" class="page-top-button js-page-top" aria-label="ページトップに移動する"></a>
+  </div>
 </body>
-</div>
+
 
 </html>
