--- a/src/page-thanks.html
+++ b/src/page-thanks.html
@@ -238,17 +238,19 @@
       <!-- パンくず -->
       <div class="page-bredcrumb bredcrumb">
         <div class="bredcrumb__inner inner">
-          <div class="bredcrumb__text">パンくずリスト</div>
+          <p class="bredcrumb__text">
+            <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <p class="bredcrumb__text">お問い合わせ</p>
+          <p class="bredcrumb__text">送信完了</p>
         </div>
       </div>
-
       <!-- 下層サンクスページ -->
       <div class="layout-thanks page-thanks">
         <div class="page-thanks__inner inner">
           <div class="page-thanks__text-block">
-            <p class="page-thanks__text-item">お問い合わせ内容を送信完了しました。
+            <p class="page-thanks__text-item page-thanks__text-item01">お問い合わせ内容を送信完了しました。
             </p>
-            <p class="page-thanks__text-item">このたびは、お問い合わせ頂き<br class="u-mobile">誠にありがとうございます。<br>
+            <p class="page-thanks__text-item page-thanks__text-item02">このたびは、お問い合わせ頂き<br class="u-mobile">誠にありがとうございます。<br>
               お送り頂きました内容を確認の上、<br class="u-mobile">3営業日以内に折り返しご連絡させて頂きます。<br>
               また、ご記入頂いたメールアドレスへ、<br class="u-mobile">自動返信の確認メールをお送りしております。
             </p>
