--- a/src/single-blog.html
+++ b/src/single-blog.html
@@ -238,7 +238,10 @@
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
-        <div class="bredcrumb__text">パンくずリスト</div>
+        <p class="bredcrumb__text">
+          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+        <p class="bredcrumb__text">ブログ一覧</p>
+        <p class="bredcrumb__text">ブログ詳細</p>
       </div>
     </div>
 
