--- a/src/page-404.html
+++ b/src/page-404.html
@@ -230,7 +230,9 @@
       <!-- パンくず -->
       <div class="page-bredcrumb bredcrumb">
         <div class="bredcrumb__inner inner">
-          <div class="bredcrumb__text bredcrumb__text--color">パンくずリスト</div>
+          <p class="bredcrumb__text bredcrumb__text--color">
+            <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <p class="bredcrumb__text bredcrumb__text--color">404</p>
         </div>
       </div>
       <!-- 下層404-->
