--- a/src/page-campaign.html
+++ b/src/page-campaign.html
@@ -238,7 +238,9 @@
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
-        <div class="bredcrumb__text">パンくずリスト</div>
+        <p class="bredcrumb__text">
+          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+        <p class="bredcrumb__text">キャンペーン</p>
       </div>
     </div>
 
@@ -274,7 +276,7 @@
                 </div>
                 <div class="campaign-card__title campaign__title--size">ライセンス取得</div>
                 <div class="campaign-card__wrap">
-                  <div class="campaign-card__text">全部コミコミ(お一人様)</div>
+                  <div class="campaign-card__text campaign-card__text--layout">全部コミコミ(お一人様)</div>
                   <div class="campaign-card__price">
                     <p class="campaign-card__first-price">¥56,000</p>
                     <p class="campaign-card__second-price campaign-card__second-price--layout">¥46,000</p>
@@ -312,7 +314,7 @@
                 </div>
                 <div class="campaign-card__title campaign__title--size">貸切体験ダイビング</div>
                 <div class="campaign-card__wrap">
-                  <div class="campaign-card__text">全部コミコミ(お一人様)</div>
+                  <div class="campaign-card__text campaign-card__text--layout">全部コミコミ(お一人様)</div>
                   <div class="campaign-card__price">
                     <p class="campaign-card__first-price">¥24,000</p>
                     <p class="campaign-card__second-price campaign-card__second-price--layout">¥18,000</p>
@@ -350,7 +352,7 @@
                 </div>
                 <div class="campaign-card__title campaign__title--size">ナイトダイビング</div>
                 <div class="campaign-card__wrap">
-                  <div class="campaign-card__text">全部コミコミ(お一人様)</div>
+                  <div class="campaign-card__text campaign-card__text--layout">全部コミコミ(お一人様)</div>
                   <div class="campaign-card__price">
                     <p class="campaign-card__first-price">¥10,000</p>
                     <p class="campaign-card__second-price campaign-card__second-price--layout">¥8,000</p>
@@ -388,7 +390,7 @@
                 </div>
                 <div class="campaign-card__title campaign__title--size">貸切ファンダイビング</div>
                 <div class="campaign-card__wrap">
-                  <div class="campaign-card__text">全部コミコミ(お一人様)</div>
+                  <div class="campaign-card__text campaign-card__text--layout">全部コミコミ(お一人様)</div>
                   <div class="campaign-card__price">
                     <p class="campaign-card__first-price">¥20,000</p>
                     <p class="campaign-card__second-price campaign-card__second-price--layout">¥16,000</p>
@@ -434,7 +436,7 @@
     </div>
 
     <!-- Contact -->
-    <section class="layout-contact contact">
+    <section class="campaign-contact contact">
       <div class="contact__inner inner">
         <div class="contact__contents">
           <div class="contact__info">
