--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -238,7 +238,9 @@
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
-        <div class="bredcrumb__text">パンくずリスト</div>
+        <p class="bredcrumb__text">
+          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+        <p class="bredcrumb__text">よくある質問</p>
       </div>
     </div>
 
