--- a/src/page-information.html
+++ b/src/page-information.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -238,7 +237,9 @@
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
-        <div class="bredcrumb__text">パンくずリスト</div>
+        <p class="bredcrumb__text">
+          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+        <p class="bredcrumb__text">ダイビング情報</p>
       </div>
     </div>
 
@@ -256,12 +257,7 @@
               <div class="tab__text-block">
                 <h2 class="tab__title">ライセンス講習</h2>
                 <p class="tab__text">
-                  泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」
-                  楽しんでいただけるよう、スタッフがサポートいたします！ス<br class="u-desktop">
-                  キューバダイビングを楽しむためには最低限の知識とスキルが要求
-                  されます。知識やスキルと言ってもそんなに難しい事ではなく、安
-                  全に楽しむ事を目的としたものです。プロダイバーの指導のもと知
-                  識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
+                  泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！スキューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
               </div>
               <div class="tab__image">
                 <img src="./assets/images/common/information_media_1.jpg" alt="ライセンス" decoding="async" loading="lazy"
@@ -272,9 +268,9 @@
               <div class="tab__text-block">
                 <h2 class="tab__title">ファンダイビング</h2>
                 <p class="tab__text">
-                  ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を<br class="u-desktop">
-                  代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ<br class="u-desktop">
-                  イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海<br class="u-desktop">
+                  ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を
+                  代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ
+                  イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海
                   岸」等もご用意！</p>
               </div>
               <div class="tab__image">
@@ -286,9 +282,9 @@
               <div class="tab__text-block">
                 <h2 class="tab__title">体験ダイビング</h2>
                 <p class="tab__text">
-                  ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を<br class="u-desktop">
-                  代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ<br class="u-desktop">
-                  イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海<br class="u-desktop">
+                  ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を
+                  代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポ
+                  イントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海
                   岸」等もご用意！</p>
               </div>
               <div class="tab__image">
