--- a/src/page-terms.html
+++ b/src/page-terms.html
@@ -238,7 +238,9 @@
       <!-- パンくず -->
       <div class="page-bredcrumb bredcrumb">
         <div class="bredcrumb__inner inner">
-          <div class="bredcrumb__text">パンくずリスト</div>
+          <p class="bredcrumb__text">
+            <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <p class="bredcrumb__text">利用規約</p>
         </div>
       </div>
 
@@ -348,51 +350,51 @@
                   <div class="footer-nav__flex">
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">キャンペーン</a>
+                        <li class="footer-nav__title">
+                          <a href="page-campaign.html">キャンペーン</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス取得</a>
+                              <a href="page-campaign.html#page-campaign__item01">ライセンス取得</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">貸切体験ダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item02">貸切体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ナイトダイビング</a>
+                              <a href="page-campaign.html#page-campaign__item03">ナイトダイビング</a>
                             </li>
                           </ul>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">私たちについて</a>
+                        <li class="footer-nav__title">
+                          <a href="page-about.html">私たちについて</a>
                         </li>
                       </ul>
                     </div>
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">ダイビング情報</a>
+                        <li class="footer-nav__title">
+                          <a href="page-information.html">ダイビング情報</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-information.html#tab__content01">ライセンス講習</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-information.html#tab__content02">体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-information.html#tab__content03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">ブログ</a>
+                        <li class="footer-nav__title">
+                          <a href="page-blog.html">ブログ</a>
                         </li>
                       </ul>
                     </div>
@@ -402,24 +404,24 @@
                   <div class="footer-nav__flex">
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">お客様の声</a>
+                        <li class="footer-nav__title">
+                          <a href="page-voice.html">お客様の声</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">料金一覧</a>
+                        <li class="footer-nav__title">
+                          <a href="page-price.html">料金一覧</a>
                         </li>
                         <li class="footer-nav__body">
                           <ul class="footer-nav__lists">
                             <li class="footer-nav__list">
-                              <a href="#">ライセンス講習</a>
+                              <a href="page-price.html#page-price__group01">ライセンス講習</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">体験ダイビング</a>
+                              <a href="page-price.html#page-price__group02">体験ダイビング</a>
                             </li>
                             <li class="footer-nav__list">
-                              <a href="#">ファンダイビング</a>
+                              <a href="page-price.html#page-price__group03">ファンダイビング</a>
                             </li>
                           </ul>
                         </li>
@@ -427,23 +429,23 @@
                     </div>
                     <div class="footer-nav__group">
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">よくある質問</a>
+                        <li class="footer-nav__title">
+                          <a href="page-faq.html">よくある質問</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                        <li class="footer-nav__title">
+                          <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">利用規約</a>
+                        <li class="footer-nav__title">
+                          <a href="page-terms.html">利用規約</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
-                        <li class="footer-nav__title ">
-                          <a href="#">お問い合わせ</a>
+                        <li class="footer-nav__title">
+                          <a href="page-contact.html">お問い合わせ</a>
                         </li>
                       </ul>
                     </div>
