--- a/src/page-voice.html
+++ b/src/page-voice.html
@@ -237,7 +237,9 @@
     <!-- パンくず -->
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
-        <div class="bredcrumb__text">パンくずリスト</div>
+        <p class="bredcrumb__text">
+          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+        <p class="bredcrumb__text">お客様の声</p>
       </div>
     </div>
 
