--- a/src/page-campaign.html
+++ b/src/page-campaign.html
@@ -295,7 +295,7 @@
                       <p class="campaign-card__comment">ご予約・お問い合わせはコチラ</p>
                     </div>
                     <div class="campaign-card__apply">
-                      <a href="#" class="button slide"><span>Contact&nbsp;us</span></a>
+                      <a href="page-contact.html" class="button slide"><span>Contact&nbsp;us</span></a>
                     </div>
                   </div>
                 </div>
@@ -333,7 +333,7 @@
                       <p class="campaign-card__comment">ご予約・お問い合わせはコチラ</p>
                     </div>
                     <div class="campaign-card__apply">
-                      <a href="#" class="button slide"><span>Contact&nbsp;us</span></a>
+                      <a href="page-contact.html" class="button slide"><span>Contact&nbsp;us</span></a>
                     </div>
                   </div>
                 </div>
@@ -371,7 +371,7 @@
                       <p class="campaign-card__comment">ご予約・お問い合わせはコチラ</p>
                     </div>
                     <div class="campaign-card__apply">
-                      <a href="#" class="button slide"><span>Contact&nbsp;us</span></a>
+                      <a href="page-contact.html" class="button slide"><span>Contact&nbsp;us</span></a>
                     </div>
                   </div>
                 </div>
@@ -409,7 +409,7 @@
                       <p class="campaign-card__comment">ご予約・お問い合わせはコチラ</p>
                     </div>
                     <div class="campaign-card__apply">
-                      <a href="#" class="button slide"><span>Contact&nbsp;us</span></a>
+                      <a href="page-contact.html" class="button slide"><span>Contact&nbsp;us</span></a>
                     </div>
                   </div>
                 </div>
