--- a/src/page-sitemap.html
+++ b/src/page-sitemap.html
@@ -252,7 +252,7 @@
               <div class="footer-nav">
                 <div class="footer-nav__contents footer-nav__contents--gap">
                   <div class="footer-nav__container">
-                    <div class="footer-nav__flex footer-nav__flex--gap">
+                    <div class="footer-nav__flex">
                       <div class="footer-nav__group">
                         <ul class="footer-nav__wrapper">
                           <li class="footer-nav__title footer-nav__title--color">
@@ -306,7 +306,7 @@
                     </div>
                   </div>
                   <div class="footer-nav__container">
-                    <div class="footer-nav__flex footer-nav__flex--gap">
+                    <div class="footer-nav__flex footer-nav__flex--layout">
                       <div class="footer-nav__group">
                         <ul class="footer-nav__wrapper">
                           <li class="footer-nav__title footer-nav__title--color">
@@ -405,7 +405,7 @@
     </main>
 
     <!--フッター-->
-    <footer class="sitemap-footer footer">
+    <footer class="layout-footer footer">
       <div class="fooer__inner inner">
         <div class="footer__wrapper">
           <div class="footer__container">
