--- a/src/single-blog.html
+++ b/src/single-blog.html
@@ -400,7 +400,7 @@
                 <div class="sidebar__title">アーカイブ</div>
                 <div class="sidebar__archive">
                   <div class="sidebar__archive-group">
-                    <h3 class="sidebar__archive-calendar js-accordion-title">2023</h3>
+                    <h3 class="sidebar__archive-calendar js-accordion-title is-open">2023</h3>
                     <ul class="sidebar__archive-months">
                       <li class="sidebar__archive-month">3月</li>
                       <li class="sidebar__archive-month">2月</li>
