--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -251,7 +251,7 @@
           <!--  アコーディオン１  -->
           <dl class="accordion__item">
             <dt class="accordion__header">ここに質問が入ります。</dt>
-            <dd class="accordion__content current">
+            <dd class="accordion__content">
               ここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入りますここに質問の答えが入ります
             </dd>
           </dl>
