--- a/src/page-voice.html
+++ b/src/page-voice.html
@@ -263,8 +263,8 @@
           </div>
         </div>
         <div class="page-voice__contents">
-          <div class="page-voice-cards">
-            <div class="page-voice-cards__item voice-card">
+          <div class="voice-cards voice-cards--layout">
+            <div class="voice-card">
               <div class="voice-card__body">
                 <div class="voice-card__container">
                   <div class="voice-card__wrap">
