--- a/src/page-information.html
+++ b/src/page-information.html
@@ -224,8 +224,8 @@
       <div class="sub-mv__inner">
         <div class="sub-mv__image">
           <picture>
-            <source srcset="./assets/images/common/information_mv.jpg" media="(min-width: 768px)">
-            <img src="./assets/images/common/information_mv_sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async">
+            <source srcset="./assets/images/common/information_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
+            <img src="./assets/images/common/information_mv_sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async" width="375" height="460">
           </picture>
         </div>
         <div class="sub-mv__title">
