--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -225,8 +225,8 @@
       <div class="sub-mv__inner">
         <div class="sub-mv__image">
           <picture>
-            <source srcset="./assets/images/common/faq_mv.jpg" media="(min-width: 768px)">
-            <img src="./assets/images/common/faq_mv_sp.jpg" alt="ビーチ" decoding="async">
+            <source srcset="./assets/images/common/faq_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
+            <img src="./assets/images/common/faq_mv_sp.jpg" alt="ビーチ" decoding="async" width="375" height="460">
           </picture>
         </div>
         <div class="sub-mv__title">
