--- a/src/page-price.html
+++ b/src/page-price.html
@@ -224,8 +224,8 @@
       <div class="sub-mv__inner">
         <div class="sub-mv__image">
           <picture>
-            <source srcset="./assets/images/common/price_mv.jpg" media="(min-width: 768px)">
-            <img src="./assets/images/common/price_mv_sp.jpg" alt="海から顔を出すダイバー" decoding="async">
+            <source srcset="./assets/images/common/price_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
+            <img src="./assets/images/common/price_mv_sp.jpg" alt="海から顔を出すダイバー" decoding="async" width="375" height="460">
           </picture>
         </div>
         <div class="sub-mv__title">
