--- a/src/page-privacypolicy.html
+++ b/src/page-privacypolicy.html
@@ -226,8 +226,8 @@
         <div class="sub-mv__inner">
           <div class="sub-mv__image">
             <picture>
-              <source srcset="./assets/images/common/other_mv.jpg" media="(min-width: 768px)">
-              <img src="./assets/images/common/other_mv_sp.jpg" alt="イソギンチャクと魚の群" decoding="async">
+              <source srcset="./assets/images/common/other_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
+              <img src="./assets/images/common/other_mv_sp.jpg" alt="イソギンチャクと魚の群" decoding="async" width="375" height="460">
             </picture>
           </div>
           <div class="sub-mv__title">
