--- a/src/page-blog.html
+++ b/src/page-blog.html
@@ -499,7 +499,12 @@
                     </ul>
                   </div>
                   <div class="sidebar__archive-group js-accordion-title">
-                    <h3 class="sidebar__archive-calendar">2022</h3>
+                    <h3 class="sidebar__archive-calendar js-accordion-title">2022</h3>
+                    <ul class="sidebar__archive-months">
+                      <li class="sidebar__archive-month">3月</li>
+                      <li class="sidebar__archive-month">2月</li>
+                      <li class="sidebar__archive-month">1月</li>
+                    </ul>
                   </div>
                 </div>
               </div>
