--- a/src/page-blog.html
+++ b/src/page-blog.html
@@ -492,19 +492,31 @@
                 <div class="sidebar__archive">
                   <div class="sidebar__archive-group">
                     <h3 class="sidebar__archive-calendar js-accordion-title is-open">2023</h3>
-                    <ul class="sidebar__archive-months">
-                      <li class="sidebar__archive-month">3月</li>
-                      <li class="sidebar__archive-month">2月</li>
-                      <li class="sidebar__archive-month">1月</li>
-                    </ul>
+                    <div class="sidebar__archive-months">
+                      <li class="sidebar__archive-month">
+                        <a href="#" class="sidebar__archive-link">3月</a>
+                      </li>
+                      <li class="sidebar__archive-month">
+                        <a href="#" class="sidebar__archive-link">2月</a>
+                      </li>
+                      <li class="sidebar__archive-month">
+                        <a href="#" class="sidebar__archive-link">1月</a>
+                      </li>
+                    </div>
                   </div>
-                  <div class="sidebar__archive-group js-accordion-title">
+                  <div class="sidebar__archive-group">
                     <h3 class="sidebar__archive-calendar js-accordion-title">2022</h3>
-                    <ul class="sidebar__archive-months">
-                      <li class="sidebar__archive-month">3月</li>
-                      <li class="sidebar__archive-month">2月</li>
-                      <li class="sidebar__archive-month">1月</li>
-                    </ul>
+                    <div class="sidebar__archive-months">
+                      <li class="sidebar__archive-month">
+                        <a href="#" class="sidebar__archive-link">3月</a>
+                      </li>
+                      <li class="sidebar__archive-month">
+                        <a href="#" class="sidebar__archive-link">2月</a>
+                      </li>
+                      <li class="sidebar__archive-month">
+                        <a href="#" class="sidebar__archive-link">1月</a>
+                      </li>
+                    </div>
                   </div>
                 </div>
               </div>
