--- a/src/page-blog.html
+++ b/src/page-blog.html
@@ -249,7 +249,7 @@
       <div class="page-blog__inner inner">
         <div class="page-blog__contents">
           <div class="page-blog__wrapper">
-            <div class="blog__cards blog__cards--layout">
+            <div class="blog-cards blog-cards--layout">
               <a href="single-blog.html" class="page-blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog_img_1.jpg" alt="ピンク色のサンゴ礁" decoding="async" loading="lazy"
