--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,9 @@
   <script defer src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script defer src="./assets/js/jquery.inview.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script defer src="./assets/js/script.js"></script>
+  <script defer src="./assets/js/gsap.js"></script>
 </head>
 
 <body id="top">
