--- a/src/page-about.html
+++ b/src/page-about.html
@@ -201,6 +201,11 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
+                        <a href="page-sitemap.html">サイトマップ</a>
+                      </li>
+                    </ul>
+                    <ul class="sp-nav__wrapper">
+                      <li class="sp-nav__title">
                         <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
@@ -282,37 +287,37 @@
           <h2 class="section-header__subtitle section-header__subtitle--layout">フォト</h2>
         </div>
         <div class="gallery__contents">
-          <div class="gallery__image gallery__image--1">
+          <div class="gallery__image">
             <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery1.jpg" data-index="1">
               <img src="./assets/images/common/gallery1.jpg" alt="赤い小さな魚の群れ" decoding="async" loading="lazy"
                 width="1492" height="984">
             </a>
           </div>
-          <div class="gallery__image gallery__image--2">
+          <div class="gallery__image">
             <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery2.jpg">
               <img src="./assets/images/common/gallery2.jpg" alt="海に浮かぶ船" decoding="async" loading="lazy" width="1160"
                 height="738">
             </a>
           </div>
-          <div class="gallery__image gallery__image--3">
+          <div class="gallery__image">
             <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery3.jpg">
               <img src="./assets/images/common/gallery3.jpg" alt="縞模様の熱帯魚" decoding="async" loading="lazy" width="1160"
                 height="738">
             </a>
           </div>
-          <div class="gallery__image gallery__image--4">
+          <div class="gallery__image">
             <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery4.jpg">
               <img src="./assets/images/common/gallery4.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1160"
                 height="738">
             </a>
           </div>
-          <div class="gallery__image gallery__image--5">
+          <div class="gallery__image">
             <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery5.jpg">
               <img src="./assets/images/common/gallery5.jpg" alt="魚の群れ" decoding="async" loading="lazy" width="1160"
                 height="738">
             </a>
           </div>
-          <div class="gallery__image gallery__image--6">
+          <div class="gallery__image">
             <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery6.jpg" data-index="6">
               <img src="./assets/images/common/gallery6.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1492"
                 height="984">
@@ -480,6 +485,11 @@
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
                         <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
+                      </li>
+                    </ul>
+                    <ul class="footer-nav__wrapper">
+                      <li class="footer-nav__title">
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
