--- a/src/index.html
+++ b/src/index.html
@@ -203,6 +203,11 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
+                        <a href="page-sitemap.html">サイトマップ</a>
+                      </li>
+                    </ul>
+                    <ul class="sp-nav__wrapper">
+                      <li class="sp-nav__title">
                         <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
@@ -798,6 +803,11 @@
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
                         <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
+                      </li>
+                    </ul>
+                    <ul class="footer-nav__wrapper">
+                      <li class="footer-nav__title">
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
