--- a/src/page-sitemap.html
+++ b/src/page-sitemap.html
@@ -202,6 +202,11 @@
                       </ul>
                       <ul class="sp-nav__wrapper">
                         <li class="sp-nav__title">
+                          <a href="page-sitemap.html">サイトマップ</a>
+                        </li>
+                      </ul>
+                      <ul class="sp-nav__wrapper">
+                        <li class="sp-nav__title">
                           <a href="page-terms.html">利用規約</a>
                         </li>
                       </ul>
@@ -341,6 +346,11 @@
                         <ul class="footer-nav__wrapper">
                           <li class="footer-nav__title footer-nav__title--color">
                             <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
+                          </li>
+                        </ul>
+                        <ul class="footer-nav__wrapper">
+                          <li class="footer-nav__title footer-nav__title--color">
+                            <a href="page-sitemap.html">サイトマップ</a>
                           </li>
                         </ul>
                         <ul class="footer-nav__wrapper">
@@ -514,6 +524,11 @@
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
                           <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-sitemap.html">サイトマップ</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
