--- a/src/page-terms.html
+++ b/src/page-terms.html
@@ -202,6 +202,11 @@
                       </ul>
                       <ul class="sp-nav__wrapper">
                         <li class="sp-nav__title">
+                          <a href="page-sitemap.html">サイトマップ</a>
+                        </li>
+                      </ul>
+                      <ul class="sp-nav__wrapper">
+                        <li class="sp-nav__title">
                           <a href="page-terms.html">利用規約</a>
                         </li>
                       </ul>
@@ -436,6 +441,11 @@
                       <ul class="footer-nav__wrapper">
                         <li class="footer-nav__title">
                           <a href="page-privacypolicy.html">プライバシー<br class="u-mobile">ポリシー</a>
+                        </li>
+                      </ul>
+                      <ul class="footer-nav__wrapper">
+                        <li class="footer-nav__title">
+                          <a href="page-sitemap.html">サイトマップ</a>
                         </li>
                       </ul>
                       <ul class="footer-nav__wrapper">
