--- a/src/page-about.html
+++ b/src/page-about.html
@@ -287,47 +287,34 @@
           <h2 class="section-header__subtitle section-header__subtitle--layout">フォト</h2>
         </div>
         <div class="gallery__contents">
-          <div class="gallery__image">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery1.jpg" data-index="1">
+          <div class="gallery__image js-modal-open">
               <img src="./assets/images/common/gallery1.jpg" alt="赤い小さな魚の群れ" decoding="async" loading="lazy"
                 width="1492" height="984">
-            </a>
           </div>
-          <div class="gallery__image">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery2.jpg">
+          <div class="gallery__image js-modal-open">
               <img src="./assets/images/common/gallery2.jpg" alt="海に浮かぶ船" decoding="async" loading="lazy" width="1160"
                 height="738">
-            </a>
           </div>
-          <div class="gallery__image">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery3.jpg">
+          <div class="gallery__image js-modal-open">
               <img src="./assets/images/common/gallery3.jpg" alt="縞模様の熱帯魚" decoding="async" loading="lazy" width="1160"
                 height="738">
-            </a>
           </div>
-          <div class="gallery__image">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery4.jpg">
+          <div class="gallery__image js-modal-open">
               <img src="./assets/images/common/gallery4.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1160"
                 height="738">
-            </a>
           </div>
-          <div class="gallery__image">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery5.jpg">
+          <div class="gallery__image js-modal-open">
               <img src="./assets/images/common/gallery5.jpg" alt="魚の群れ" decoding="async" loading="lazy" width="1160"
                 height="738">
-            </a>
           </div>
-          <div class="gallery__image">
-            <a href="#" class="js-modal-open" data-image="./assets/images/common/gallery6.jpg" data-index="6">
+          <div class="gallery__image js-modal-open">
               <img src="./assets/images/common/gallery6.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1492"
                 height="984">
-            </a>
           </div>
           <!-- モーダル -->
           <div class="modal js-modal">
-            <div class="modal__overlay js-modal-close"></div>
-            <div class="modal__content">
-              <img src="" alt="" class="modal__image">
+            <div class="modal__image">
+              <img src="" alt="拡大写真" class="modal__img js-modal-img">
             </div>
           </div>
         </div>
