--- a/src/page-about.html
+++ b/src/page-about.html
@@ -201,12 +201,12 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
@@ -230,7 +230,8 @@
         <div class="sub-mv__image">
           <picture>
             <source srcset="./assets/images/common/about_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
-            <img src="./assets/images/common/about_mv-sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async" width="375" height="460">
+            <img src="./assets/images/common/about_mv-sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async" width="375"
+              height="460">
           </picture>
         </div>
         <div class="sub-mv__title">
@@ -243,7 +244,8 @@
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <p class="bredcrumb__text">
-          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <a href="index.html" class="berdcrumb__link">TOP</a>
+        </p>
         <p class="bredcrumb__text">私たちについて</p>
       </div>
     </div>
@@ -288,28 +290,28 @@
         </div>
         <div class="gallery__contents">
           <div class="gallery__image js-modal-open">
-              <img src="./assets/images/common/gallery1.jpg" alt="赤い小さな魚の群れ" decoding="async" loading="lazy"
-                width="1492" height="984">
+            <img src="./assets/images/common/gallery1.jpg" alt="赤い小さな魚の群れ" decoding="async" loading="lazy" width="1492"
+              height="984">
           </div>
           <div class="gallery__image js-modal-open">
-              <img src="./assets/images/common/gallery2.jpg" alt="海に浮かぶ船" decoding="async" loading="lazy" width="1160"
-                height="738">
+            <img src="./assets/images/common/gallery2.jpg" alt="海に浮かぶ船" decoding="async" loading="lazy" width="1160"
+              height="738">
           </div>
           <div class="gallery__image js-modal-open">
-              <img src="./assets/images/common/gallery3.jpg" alt="縞模様の熱帯魚" decoding="async" loading="lazy" width="1160"
-                height="738">
+            <img src="./assets/images/common/gallery3.jpg" alt="縞模様の熱帯魚" decoding="async" loading="lazy" width="1160"
+              height="738">
           </div>
           <div class="gallery__image js-modal-open">
-              <img src="./assets/images/common/gallery4.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1160"
-                height="738">
+            <img src="./assets/images/common/gallery4.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1160"
+              height="738">
           </div>
           <div class="gallery__image js-modal-open">
-              <img src="./assets/images/common/gallery5.jpg" alt="魚の群れ" decoding="async" loading="lazy" width="1160"
-                height="738">
+            <img src="./assets/images/common/gallery5.jpg" alt="魚の群れ" decoding="async" loading="lazy" width="1160"
+              height="738">
           </div>
           <div class="gallery__image js-modal-open">
-              <img src="./assets/images/common/gallery6.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1492"
-                height="984">
+            <img src="./assets/images/common/gallery6.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy" width="1492"
+              height="984">
           </div>
           <!-- モーダル -->
           <div class="modal js-modal">
@@ -476,12 +478,12 @@
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
