--- a/src/page-campaign.html
+++ b/src/page-campaign.html
@@ -201,12 +201,12 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
@@ -230,8 +230,10 @@
       <div class="sub-mv__inner">
         <div class="sub-mv__image">
           <picture>
-            <source srcset="./assets/images/common/campaign_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
-            <img src="./assets/images/common/campaign_mv_sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async" width="375" height="460">
+            <source srcset="./assets/images/common/campaign_mv.jpg" media="(min-width: 768px)" width="1440"
+              height="548">
+            <img src="./assets/images/common/campaign_mv_sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async" width="375"
+              height="460">
           </picture>
         </div>
         <div class="sub-mv__title">
@@ -244,7 +246,8 @@
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <p class="bredcrumb__text">
-          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <a href="index.html" class="berdcrumb__link">TOP</a>
+        </p>
         <p class="bredcrumb__text">キャンペーン</p>
       </div>
     </div>
@@ -595,12 +598,12 @@
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
