--- a/src/page-information.html
+++ b/src/page-information.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -200,12 +201,12 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
@@ -229,8 +230,10 @@
       <div class="sub-mv__inner">
         <div class="sub-mv__image">
           <picture>
-            <source srcset="./assets/images/common/information_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
-            <img src="./assets/images/common/information_mv_sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async" width="375" height="460">
+            <source srcset="./assets/images/common/information_mv.jpg" media="(min-width: 768px)" width="1440"
+              height="548">
+            <img src="./assets/images/common/information_mv_sp.jpg" alt="黄色い熱帯魚が2匹泳いでいる様子" decoding="async" width="375"
+              height="460">
           </picture>
         </div>
         <div class="sub-mv__title">
@@ -243,7 +246,8 @@
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <p class="bredcrumb__text">
-          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <a href="index.html" class="berdcrumb__link">TOP</a>
+        </p>
         <p class="bredcrumb__text">ダイビング情報</p>
       </div>
     </div>
@@ -262,7 +266,8 @@
               <div class="tab__text-block">
                 <h2 class="tab__title">ライセンス講習</h2>
                 <p class="tab__text">
-                  泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！スキューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！</p>
+                  泳げない人も、ちょっと水が苦手な人も、ダイビングを「安全に」楽しんでいただけるよう、スタッフがサポートいたします！スキューバダイビングを楽しむためには最低限の知識とスキルが要求されます。知識やスキルと言ってもそんなに難しい事ではなく、安全に楽しむ事を目的としたものです。プロダイバーの指導のもと知識とスキルを習得しCカードを取得して、ダイバーになろう！
+                </p>
               </div>
               <div class="tab__image">
                 <img src="./assets/images/common/information_media_1.jpg" alt="ライセンス" decoding="async" loading="lazy"
@@ -457,12 +462,12 @@
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
