--- a/src/page-contact.html
+++ b/src/page-contact.html
@@ -201,12 +201,12 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
@@ -244,7 +244,8 @@
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <p class="bredcrumb__text">
-          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <a href="index.html" class="berdcrumb__link">TOP</a>
+        </p>
         <p class="bredcrumb__text">お問い合わせ</p>
       </div>
     </div>
@@ -461,12 +462,12 @@
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
