--- a/src/page-price.html
+++ b/src/page-price.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -200,12 +201,12 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
@@ -230,7 +231,8 @@
         <div class="sub-mv__image">
           <picture>
             <source srcset="./assets/images/common/price_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
-            <img src="./assets/images/common/price_mv_sp.jpg" alt="海から顔を出すダイバー" decoding="async" width="375" height="460">
+            <img src="./assets/images/common/price_mv_sp.jpg" alt="海から顔を出すダイバー" decoding="async" width="375"
+              height="460">
           </picture>
         </div>
         <div class="sub-mv__title">
@@ -243,7 +245,8 @@
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <p class="bredcrumb__text">
-          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <a href="index.html" class="berdcrumb__link">TOP</a>
+        </p>
         <p class="bredcrumb__text">料金一覧</p>
       </div>
     </div>
@@ -491,12 +494,12 @@
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
