--- a/src/page-voice.html
+++ b/src/page-voice.html
@@ -201,12 +201,12 @@
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
                       <li class="sp-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="sp-nav__wrapper">
@@ -230,7 +230,8 @@
         <div class="sub-mv__image">
           <picture>
             <source srcset="./assets/images/common/voice_mv.jpg" media="(min-width: 768px)" width="1440" height="548">
-            <img src="./assets/images/common/voice_mv_sp.jpg" alt="スキューバダイビング" decoding="async" width="375" height="460">
+            <img src="./assets/images/common/voice_mv_sp.jpg" alt="スキューバダイビング" decoding="async" width="375"
+              height="460">
           </picture>
         </div>
         <div class="sub-mv__title">
@@ -243,7 +244,8 @@
     <div class="page-bredcrumb bredcrumb">
       <div class="bredcrumb__inner inner">
         <p class="bredcrumb__text">
-          <a href="index.html" class="berdcrumb__link">TOP</a></p>
+          <a href="index.html" class="berdcrumb__link">TOP</a>
+        </p>
         <p class="bredcrumb__text">お客様の声</p>
       </div>
     </div>
@@ -587,12 +589,12 @@
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-sitemap.html">サイトマップ</a>
+                        <a href="page-terms.html">利用規約</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
                       <li class="footer-nav__title">
-                        <a href="page-terms.html">利用規約</a>
+                        <a href="page-sitemap.html">サイトマップ</a>
                       </li>
                     </ul>
                     <ul class="footer-nav__wrapper">
