--- a/src/page-blog.html
+++ b/src/page-blog.html
@@ -256,7 +256,7 @@
         <div class="page-blog__contents">
           <div class="page-blog__wrapper">
             <div class="blog-cards blog-cards--layout">
-              <a href="single-blog.html" class="page-blog-cards__item blog-card">
+              <a href="single-blog.html" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog_img_1.jpg" alt="ピンク色のサンゴ礁" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -268,7 +268,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog_img_2.jpg" alt="ウミガメ" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -280,7 +280,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog_img_3.jpg" alt="カクレクマノミ" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -292,7 +292,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/page_blog_img1.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -304,7 +304,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/page_blog_img2.jpg" alt="斑点模様のウミウシ" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -316,7 +316,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/page_blog_img3.jpg" alt="クラゲの群れ" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -328,7 +328,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/blog_img_3.jpg" alt="カクレクマノミ" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -340,7 +340,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/page_blog_img1.jpg" alt="黄色い熱帯魚" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -352,7 +352,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/page_blog_img2.jpg" alt="斑点模様のウミウシ" decoding="async" loading="lazy"
                     width="602" height="402">
@@ -364,7 +364,7 @@
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                 </div>
               </a>
-              <a href="#" class="page-blog-cards__item blog-card">
+              <a href="#" class="blog-cards__item blog-card">
                 <figure class="blog-card__img">
                   <img src="./assets/images/common/page_blog_img3.jpg" alt="クラゲの群れ" decoding="async" loading="lazy"
                     width="602" height="402">
